tdf#131389 crash clearing cell bg from sidebar

Change-Id: Id246c176bf44f2eb2d2e135400974c437f583a7f